fix padding on mobile

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -56,8 +56,8 @@
 @media only screen and (max-width: 767px) {
   #about {
     display: block;
-    margin-bottom: 0;
-    margin-top: 20px;
+    margin-bottom: 15px;
+    padding-top: 60px;
   }
 
   #about img {
