--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -59,7 +59,7 @@
 
 @media only screen and (max-width: 767px) {
   #footer {
-    margin-top: 20px;
+    margin-top: 60px;
     font-size: 13px;
     height: 200px;
   }
